added width for footer-text

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ p {
 }
 img {
   display: block;
+  width: 100%;
 }
 
 .container {
@@ -33,7 +34,6 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid blue;
 }
 
 .list {
@@ -261,10 +261,8 @@ img {
   flex-wrap: wrap;
   margin-left: -24px;
   margin-top: -48px;
-  outline: 1px solid tomato;
 }
 .works-list > .card-item {
-  outline: 1px solid teal;
   flex-basis: calc(100% / 3-24);
   margin-left: 24px;
   margin-top: 48px;
@@ -293,6 +291,7 @@ img {
 .footer-text {
   line-height: 1.5;
   color: var(--rare-color);
+  max-width: 264px;
 }
 .description {
   line-height: 1.5;
