--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ img {
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .list {
@@ -115,13 +116,17 @@ img {
 .hero {
   background-color: var(--primary-color);
   text-align: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .hero-title {
+  width: 496px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--invent-color);
   margin-bottom: 48px;
 }
@@ -139,7 +144,6 @@ img {
   cursor: pointer;
   display: inline-block;
   padding: 16px 32px;
-  margin-bottom: 188px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -155,6 +159,9 @@ img {
 }
 .benefits-list {
   display: flex;
+}
+.benefits-item {
+  width: calc((100%-7px) / 4);
 }
 .benefits-list .benefits-item + .benefits-item {
   margin-left: 24px;
@@ -248,12 +255,14 @@ img {
 .work-section {
   padding-top: 96px;
 }
-.card {
-  border-bottom: 1px solid var(--rare-color);
-}
+
 .content {
-  padding: 32px 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
   background-color: var(--invent-color);
+  border: 1px solid var(--rare-color);
+  border-top: transparent;
 }
 
 .works-list {
@@ -263,7 +272,7 @@ img {
   margin-top: -48px;
 }
 .works-list > .card-item {
-  flex-basis: calc(100% / 3-24);
+  flex-basis: calc(100% / 3-24px);
   margin-left: 24px;
   margin-top: 48px;
 }
@@ -291,6 +300,8 @@ img {
 .footer-text {
   line-height: 1.5;
   color: var(--rare-color);
+}
+.footer-content {
   max-width: 264px;
 }
 .description {
